src/concurrent/qtconcurrentmap.h
@@ -114,7 +114,8 @@ template <typename ResultType, typename Sequence, typename MapFunctor, typename 
 #else
 template <typename ResultType, typename Sequence, typename MapFunctor, typename ReduceFunctor,
           typename InitialValueType,
-          std::enable_if_t<std::is_convertible_v<InitialValueType, ResultType>, int> = 0>
+          std::enable_if_t<QtPrivate::isInitialValueCompatible_v<InitialValueType, ResultType>,
+                           int> = 0>
 #endif
 QFuture<ResultType> mappedReduced(QThreadPool *pool,
                                   Sequence &&sequence,
@@ -135,7 +136,8 @@ template <typename ResultType, typename Sequence, typename MapFunctor, typename 
 #else
 template <typename ResultType, typename Sequence, typename MapFunctor, typename ReduceFunctor,
           typename InitialValueType,
-          std::enable_if_t<std::is_convertible_v<InitialValueType, ResultType>, int> = 0>
+          std::enable_if_t<QtPrivate::isInitialValueCompatible_v<InitialValueType, ResultType>,
+                           int> = 0>
 #endif
 QFuture<ResultType> mappedReduced(Sequence &&sequence,
                                   MapFunctor &&map,
@@ -187,7 +189,8 @@ template <typename Sequence, typename MapFunctor, typename ReduceFunctor,
           typename ResultType =
                   typename QtPrivate::ReduceResultType<std::decay_t<ReduceFunctor>>::ResultType,
           typename InitialValueType,
-          std::enable_if_t<std::is_convertible_v<InitialValueType, ResultType>, int> = 0>
+          std::enable_if_t<QtPrivate::isInitialValueCompatible_v<InitialValueType, ResultType>,
+                           int> = 0>
 #endif
 QFuture<ResultType> mappedReduced(QThreadPool *pool,
                                   Sequence &&sequence,
@@ -211,7 +214,8 @@ template <typename Sequence, typename MapFunctor, typename ReduceFunctor,
           typename ResultType =
                   typename QtPrivate::ReduceResultType<std::decay_t<ReduceFunctor>>::ResultType,
           typename InitialValueType,
-          std::enable_if_t<std::is_convertible_v<InitialValueType, ResultType>, int> = 0>
+          std::enable_if_t<QtPrivate::isInitialValueCompatible_v<InitialValueType, ResultType>,
+                           int> = 0>
 #endif
 QFuture<ResultType> mappedReduced(Sequence &&sequence,
                                   MapFunctor &&map,
@@ -260,7 +264,8 @@ template <typename ResultType, typename Iterator, typename MapFunctor, typename 
 #else
 template <typename ResultType, typename Iterator, typename MapFunctor, typename ReduceFunctor,
           typename InitialValueType,
-          std::enable_if_t<std::is_convertible_v<InitialValueType, ResultType>, int> = 0>
+          std::enable_if_t<QtPrivate::isInitialValueCompatible_v<InitialValueType, ResultType>,
+                           int> = 0>
 #endif
 QFuture<ResultType> mappedReduced(QThreadPool *pool,
                                   Iterator begin,
@@ -282,7 +287,8 @@ template <typename ResultType, typename Iterator, typename MapFunctor, typename 
 #else
 template <typename ResultType, typename Iterator, typename MapFunctor, typename ReduceFunctor,
           typename InitialValueType,
-          std::enable_if_t<std::is_convertible_v<InitialValueType, ResultType>, int> = 0>
+          std::enable_if_t<QtPrivate::isInitialValueCompatible_v<InitialValueType, ResultType>,
+                           int> = 0>
 #endif
 QFuture<ResultType> mappedReduced(Iterator begin,
                                   Iterator end,
@@ -336,7 +342,8 @@ template <typename Iterator, typename MapFunctor, typename ReduceFunctor,
           typename ResultType =
                   typename QtPrivate::ReduceResultType<std::decay_t<ReduceFunctor>>::ResultType,
           typename InitialValueType,
-          std::enable_if_t<std::is_convertible_v<InitialValueType, ResultType>, int> = 0>
+          std::enable_if_t<QtPrivate::isInitialValueCompatible_v<InitialValueType, ResultType>,
+                           int> = 0>
 #endif
 QFuture<ResultType> mappedReduced(QThreadPool *pool,
                                   Iterator begin,
@@ -360,7 +367,8 @@ template<typename Iterator, typename MapFunctor, typename ReduceFunctor,
          typename ResultType =
                  typename QtPrivate::ReduceResultType<std::decay_t<ReduceFunctor>>::ResultType,
          typename InitialValueType,
-         std::enable_if_t<std::is_convertible_v<InitialValueType, ResultType>, int> = 0>
+         std::enable_if_t<QtPrivate::isInitialValueCompatible_v<InitialValueType, ResultType>,
+                          int> = 0>
 #endif
 QFuture<ResultType> mappedReduced(Iterator begin,
                                   Iterator end,
@@ -488,7 +496,8 @@ template <typename ResultType, typename Sequence, typename MapFunctor, typename 
 #else
 template <typename ResultType, typename Sequence, typename MapFunctor, typename ReduceFunctor,
           typename InitialValueType,
-          std::enable_if_t<std::is_convertible_v<InitialValueType, ResultType>, int> = 0>
+          std::enable_if_t<QtPrivate::isInitialValueCompatible_v<InitialValueType, ResultType>,
+                           int> = 0>
 #endif
 ResultType blockingMappedReduced(QThreadPool *pool,
                                  Sequence &&sequence,
@@ -511,7 +520,8 @@ template <typename ResultType, typename Sequence, typename MapFunctor, typename 
 #else
 template <typename ResultType, typename Sequence, typename MapFunctor, typename ReduceFunctor,
           typename InitialValueType,
-          std::enable_if_t<std::is_convertible_v<InitialValueType, ResultType>, int> = 0>
+          std::enable_if_t<QtPrivate::isInitialValueCompatible_v<InitialValueType, ResultType>,
+                           int> = 0>
 #endif
 ResultType blockingMappedReduced(Sequence &&sequence,
                                  MapFunctor &&map,
@@ -568,7 +578,8 @@ template <typename MapFunctor, typename ReduceFunctor, typename Sequence,
           typename ResultType =
                   typename QtPrivate::ReduceResultType<std::decay_t<ReduceFunctor>>::ResultType,
           typename InitialValueType,
-          std::enable_if_t<std::is_convertible_v<InitialValueType, ResultType>, int> = 0>
+          std::enable_if_t<QtPrivate::isInitialValueCompatible_v<InitialValueType, ResultType>,
+                           int> = 0>
 #endif
 ResultType blockingMappedReduced(QThreadPool *pool,
                                  Sequence &&sequence,
@@ -593,7 +604,8 @@ template<typename MapFunctor, typename ReduceFunctor, typename Sequence,
          typename ResultType =
                  typename QtPrivate::ReduceResultType<std::decay_t<ReduceFunctor>>::ResultType,
          typename InitialValueType,
-         std::enable_if_t<std::is_convertible_v<InitialValueType, ResultType>, int> = 0>
+         std::enable_if_t<QtPrivate::isInitialValueCompatible_v<InitialValueType, ResultType>,
+                          int> = 0>
 #endif
 ResultType blockingMappedReduced(Sequence &&sequence,
                                  MapFunctor &&map,
@@ -645,7 +657,8 @@ template <typename ResultType, typename Iterator, typename MapFunctor, typename 
 #else
 template <typename ResultType, typename Iterator, typename MapFunctor, typename ReduceFunctor,
           typename InitialValueType,
-          std::enable_if_t<std::is_convertible_v<InitialValueType, ResultType>, int> = 0>
+          std::enable_if_t<QtPrivate::isInitialValueCompatible_v<InitialValueType, ResultType>,
+                           int> = 0>
 #endif
 ResultType blockingMappedReduced(QThreadPool *pool,
                                  Iterator begin,
@@ -669,7 +682,8 @@ template <typename ResultType, typename Iterator, typename MapFunctor, typename 
 #else
 template <typename ResultType, typename Iterator, typename MapFunctor, typename ReduceFunctor,
           typename InitialValueType,
-          std::enable_if_t<std::is_convertible_v<InitialValueType, ResultType>, int> = 0>
+          std::enable_if_t<QtPrivate::isInitialValueCompatible_v<InitialValueType, ResultType>,
+                           int> = 0>
 #endif
 ResultType blockingMappedReduced(Iterator begin,
                                  Iterator end,
@@ -727,7 +741,8 @@ template <typename Iterator, typename MapFunctor, typename ReduceFunctor,
           typename ResultType =
                   typename QtPrivate::ReduceResultType<std::decay_t<ReduceFunctor>>::ResultType,
           typename InitialValueType,
-          std::enable_if_t<std::is_convertible_v<InitialValueType, ResultType>, int> = 0>
+          std::enable_if_t<QtPrivate::isInitialValueCompatible_v<InitialValueType, ResultType>,
+                           int> = 0>
 #endif
 ResultType blockingMappedReduced(QThreadPool *pool,
                                  Iterator begin,
@@ -752,7 +767,8 @@ template <typename Iterator, typename MapFunctor, typename ReduceFunctor,
           typename ResultType =
                   typename QtPrivate::ReduceResultType<std::decay_t<ReduceFunctor>>::ResultType,
           typename InitialValueType,
-          std::enable_if_t<std::is_convertible_v<InitialValueType, ResultType>, int> = 0>
+          std::enable_if_t<QtPrivate::isInitialValueCompatible_v<InitialValueType, ResultType>,
+                           int> = 0>
 #endif
 ResultType blockingMappedReduced(Iterator begin,
                                  Iterator end,
